--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,3 +3,7 @@ Version: 0.01
 Date: 2014-10
 Title: Location OverLap Analysis
 Author: Nathan Sheffield <http://www.nathansheffield.com>
+Depends:
+    GenomicRanges,
+    IRanges,
+    simpleCache
