--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,6 @@
 export(appendAnnotations)
 export(calcCpGPercentForDb)
 export(checkUniverseAppropriateness)
-export(countOverlapsAny)
-export(countOverlapsAnyRev)
 export(enrichmentCategoryCalc)
 export(enrichmentLocationCalc)
 export(extractEnrichmentOverlaps)
@@ -35,3 +33,5 @@ export(setSharedDataDir)
 export(splitDataTable)
 export(writeCombinedEnrichment)
 export(writeDataTableSplitByColumn)
+import(rtracklayer)
+import(stringr)
