Major update: Add easy generic DB processing functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(loadCategoryEnrichmentDatabases)
 export(loadLocationEnrichmentDatabases)
 export(loadLocationEnrichmentMm10)
 export(loadLocationEnrichmentMm9)
+export(loadRegionDB)
 export(locationEnrichment)
 export(namesToNumbers)
 export(readCistrome)
@@ -28,6 +29,7 @@ export(readEncodeTFBSannotationMm9)
 export(readMSigDB)
 export(readRegionAnnotation)
 export(readRegionDb)
+export(readRegionGRL)
 export(redefineUserSets)
 export(setSharedDataDir)
 export(splitDataTable)
