--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(locationEnrichment)
 export(namesToNumbers)
 export(readCistrome)
 export(readCistromeAnnotation)
+export(readCollectionAnnotation)
 export(readDhs)
 export(readDhsAnnotation)
 export(readEncodeTFBS)
