--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(readMSigDB)
 export(readRegionAnnotation)
 export(readRegionDb)
 export(readRegionGRL)
+export(readRegionSetAnnotation)
 export(redefineUserSets)
 export(setSharedDataDir)
 export(splitDataTable)
