--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,5 +37,8 @@ export(setSharedDataDir)
 export(splitDataTable)
 export(writeCombinedEnrichment)
 export(writeDataTableSplitByColumn)
+import(data.table)
 import(rtracklayer)
+import(simpleCache)
 import(stringr)
+importFrom(reshape2,melt)
