Generic DBs works

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(calcCpGPercentForDb)
 export(checkUniverseAppropriateness)
 export(enrichmentCategoryCalc)
 export(enrichmentLocationCalc)
+export(enrichmentLocationCalcGen)
 export(extractEnrichmentOverlaps)
 export(getCistromeGroupSizes)
 export(getEncodeGroupSizes)
