Add file splitting; caching for custom databases

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(locationEnrichment)
 export(namesToNumbers)
 export(readCistrome)
 export(readCistromeAnnotation)
+export(readCollection)
 export(readCollectionAnnotation)
 export(readDhs)
 export(readDhsAnnotation)
@@ -36,6 +37,7 @@ export(readRegionSetAnnotation)
 export(redefineUserSets)
 export(setSharedDataDir)
 export(splitDataTable)
+export(splitFileIntoCollection)
 export(writeCombinedEnrichment)
 export(writeDataTableSplitByColumn)
 import(data.table)
