--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,18 @@ Package: LOLA
 Version: 0.01
 Date: 2014-10
 Title: Location OverLap Analysis
+Description: LOLA is an R package providing functions for testing overlap of sets of genomic regions with public and custom databases.
 Author: Nathan Sheffield <http://www.nathansheffield.com>
+Maintainer: Nathan Sheffield <sheffien@github.com>
 Depends:
     GenomicRanges,
     IRanges,
     simpleCache,
     data.table,
-    stringr,
     rtracklayer
 Imports:
-    reshape2
+    reshape2, stringr
+Suggests: knitr
+VignetteBuilder: knitr
+License: GPL
+
