--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: LOLA
-Version: 0.01
-Date: 2014-10
+Version: 0.02
+Date: 2015-04
 Title: Location OverLap Analysis
 Description: LOLA is an R package providing functions for testing overlap of sets of genomic regions with public and custom databases.
 Author: Nathan Sheffield <http://www.nathansheffield.com>
@@ -13,7 +13,7 @@ Depends:
     rtracklayer
 Imports:
     reshape2, stringr
-Suggests: knitr
+Suggests: knitr, parallel
 VignetteBuilder: knitr
 License: GPL
 
