--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(calcLocEnrichment)
 export(checkUniverseAppropriateness)
 export(extractEnrichmentOverlaps)
+export(lapplyAlias)
 export(loadRegionDB)
 export(readCollection)
 export(readCollectionAnnotation)
@@ -19,7 +20,4 @@ export(writeDataTableSplitByColumn)
 import(GenomicRanges)
 import(IRanges)
 import(data.table)
-import(rtracklayer)
-import(simpleCache)
-import(stringr)
 importFrom(reshape2,melt)
