--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(checkUniverseAppropriateness)
 export(extractEnrichmentOverlaps)
 export(lapplyAlias)
 export(loadRegionDB)
+export(mergeRegionDBs)
 export(readBed)
 export(readCollection)
 export(readCollectionAnnotation)
