Fix cache-only database Until now, reading from caches worked, but only if you had all the files in the DB as well, because these were used for annotation. Now, the annotation files are also cached, so you can have a true cache-only database. Requires updating the cache download as well.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(mergeRegionDBs)
 export(readBed)
 export(readCollection)
 export(readCollectionAnnotation)
+export(readCollectionFiles)
 export(readRegionGRL)
 export(readRegionSetAnnotation)
 export(redefineUserSets)
