--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: LOLA
-Version: 0.99.0
+Version: 0.99.2
 Date: 2015-05-18
 Title: Location OverLap Analysis
 Description: Provides functions for testing overlap of sets of genomic regions with public and custom databases.
@@ -10,8 +10,9 @@ Depends:
     data.table
 Imports: 
     reshape2
-Suggests: knitr, parallel, BiocGenerics, simpleCache,
+Suggests: knitr, parallel, BiocGenerics,
     testthat
+Enhances: simpleCache
 VignetteBuilder: knitr
 License: GPL-3
 biocViews: GeneSetEnrichment, GeneRegulation, GenomeAnnotation, SystemsBiology, FunctionalGenomics, ChIPSeq, MethylSeq, Sequencing
