--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,14 @@
 Package: LOLA
-Version: 0.99.6
+Version: 0.99.7
 Date: 2015-05-18
 Title: Location OverLap Analysis
 Description: Provides functions for testing overlap of sets of genomic regions with public and custom databases.
 Author: Nathan Sheffield <http://www.databio.org>
 Maintainer: Nathan Sheffield <nathan@code.databio.org>
-Depends: 
-    GenomicRanges, IRanges, 
-    data.table
-Imports: 
-    reshape2
-Suggests: knitr, parallel, BiocGenerics,
-    testthat
+Imports:
+	GenomicRanges, data.table, reshape2
+Suggests:
+	knitr, parallel, BiocGenerics, testthat
 Enhances: simpleCache
 VignetteBuilder: knitr
 License: GPL-3
