--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,9 +16,9 @@ export(redefineUserSets)
 export(runLOLA)
 export(setLapplyAlias)
 export(setSharedDataDir)
-export(splitDataTable)
 export(splitFileIntoCollection)
 export(writeCombinedEnrichment)
 import(GenomicRanges)
+import(IRanges)
 import(data.table)
 importFrom(reshape2,melt)
