Update docs, exports, examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@
 export(buildRestrictedUniverse)
 export(checkUniverseAppropriateness)
 export(extractEnrichmentOverlaps)
-export(lapplyAlias)
+export(getRegionSet)
 export(loadRegionDB)
 export(mergeRegionDBs)
 export(readBed)
@@ -14,7 +14,6 @@ export(readRegionGRL)
 export(readRegionSetAnnotation)
 export(redefineUserSets)
 export(runLOLA)
-export(setLapplyAlias)
 export(setSharedDataDir)
 export(splitFileIntoCollection)
 export(writeCombinedEnrichment)
