--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(buildRestrictedUniverse)
 export(checkUniverseAppropriateness)
 export(extractEnrichmentOverlaps)
 export(getRegionSet)
+export(listRegionSets)
 export(loadRegionDB)
 export(mergeRegionDBs)
 export(readBed)
