--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,17 @@ export(runLOLA)
 export(setSharedDataDir)
 export(splitFileIntoCollection)
 export(writeCombinedEnrichment)
-import(GenomicRanges)
 import(IRanges)
-import(data.table)
+importFrom(GenomicRanges,GRanges)
+importFrom(GenomicRanges,GRangesList)
+importFrom(GenomicRanges,elementMetadata)
+importFrom(data.table,":=")
+importFrom(data.table,as.data.table)
+importFrom(data.table,data.table)
+importFrom(data.table,fread)
+importFrom(data.table,melt)
+importFrom(data.table,setDT)
+importFrom(data.table,setcolorder)
+importFrom(data.table,setkey)
+importFrom(data.table,setkeyv)
+importFrom(data.table,setnames)
