--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,8 @@ export(runLOLA)
 export(setSharedDataDir)
 export(splitFileIntoCollection)
 export(writeCombinedEnrichment)
+import(BiocGenerics)
+import(S4Vectors)
 import(IRanges)
 importFrom(GenomicRanges,GRanges)
 importFrom(GenomicRanges,GRangesList)
