Change readBed to 1-based. Fix #14. Also: - Fix R check and biocCheck for plot function - Update to latest data.table conventions - Fix some R check import suggestions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,12 +14,14 @@ Imports:
     S4Vectors,
     IRanges,
     GenomicRanges,
-    data.table
+    data.table,
+    utils,
+    stats
 Suggests:
     knitr,
     parallel,
     testthat
-Enhances: simpleCache, qvalue
+Enhances: simpleCache, qvalue, ggplot2
 VignetteBuilder: knitr
 License: GPL-3
 biocViews: GeneSetEnrichment, GeneRegulation, GenomeAnnotation, SystemsBiology,
