--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,3 +37,6 @@ importFrom(data.table,setcolorder)
 importFrom(data.table,setkey)
 importFrom(data.table,setkeyv)
 importFrom(data.table,setnames)
+importFrom(stats,fisher.test)
+importFrom(stats,setNames)
+importFrom(utils,write.table)
