--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,8 @@ Description: Provides functions for testing overlap of sets of genomic regions
     with public and custom region set (genomic ranges) databases. This makes it
     possible to do automated enrichment analysis for genomic region sets, thus
     facilitating interpretation of functional genomics and epigenomics data.
+Authors@R: c(person("Nathan", "Sheffield", role=c("aut", "cre")),
+            person("Christoph", "Bock", role=c("cre")))   
 Author: Nathan Sheffield <http://www.databio.org> [aut, cre],
     Christoph Bock [cre]
 Maintainer: Nathan Sheffield <nathan@code.databio.org>
@@ -20,12 +22,14 @@ Imports:
 Suggests:
     knitr,
     parallel,
-    testthat
+    testthat,
+    BiocStyle,
+    rmarkdown
 Enhances: simpleCache, qvalue, ggplot2
 VignetteBuilder: knitr
 License: GPL-3
 biocViews: GeneSetEnrichment, GeneRegulation, GenomeAnnotation, SystemsBiology,
     FunctionalGenomics, ChIPSeq, MethylSeq, Sequencing
 URL: http://databio.org/lola
-BugReports: http://github.com/sheffien/LOLA
+BugReports: http://github.com/nsheff/LOLA
 RoxygenNote: 5.0.1
