--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,21 +23,11 @@ export(writeCombinedEnrichment)
 import(BiocGenerics)
 import(IRanges)
 import(S4Vectors)
-import(reshape2)
+import(data.table)
 importFrom(GenomicRanges,GRanges)
 importFrom(GenomicRanges,GRangesList)
 importFrom(GenomicRanges,elementMetadata)
 importFrom(GenomicRanges,strand)
-importFrom(data.table,":=")
-importFrom(data.table,as.data.table)
-importFrom(data.table,data.table)
-importFrom(data.table,fread)
-importFrom(data.table,melt)
-importFrom(data.table,setDT)
-importFrom(data.table,setcolorder)
-importFrom(data.table,setkey)
-importFrom(data.table,setkeyv)
-importFrom(data.table,setnames)
 importFrom(stats,fisher.test)
 importFrom(stats,setNames)
 importFrom(utils,write.table)
