--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,12 +31,12 @@ importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
 importFrom(data.table,fread)
-importFrom(data.table,melt.data.table)
 importFrom(data.table,setDT)
 importFrom(data.table,setcolorder)
 importFrom(data.table,setkey)
 importFrom(data.table,setkeyv)
 importFrom(data.table,setnames)
+importFrom(reshape2,melt)
 importFrom(stats,fisher.test)
 importFrom(stats,setNames)
 importFrom(utils,write.table)
