--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,9 +7,9 @@ Description: Provides functions for testing overlap of sets of genomic regions
     possible to do automated enrichment analysis for genomic region sets, thus
     facilitating interpretation of functional genomics and epigenomics data.
 Authors@R: c(person("Nathan", "Sheffield", email = "nathan@code.databio.org", role=c("aut", "cre")),
-            person("Christoph", "Bock", role=c("cre")))   
+            person("Christoph", "Bock", role=c("ctb")))
 Author: Nathan Sheffield <http://www.databio.org> [aut, cre],
-    Christoph Bock [cre]
+    Christoph Bock [ctb]
 Maintainer: Nathan Sheffield <nathan@code.databio.org>
 Imports:
     BiocGenerics,
