--- a/_pkgdown.yaml
+++ b/_pkgdown.yaml
@@ -16,16 +16,10 @@ navbar:
     href: https://github.com/nsheff/LOLA
   - text: Bioconductor
     href: http://bioconductor.org/packages/LOLA/
-  - text: Support
-    icon: fa-question-circle-o
-    href: https://support.bioconductor.org/
-  - text: Tarball
-    icon: fa-file-archive-o
-    href: https://github.com/nsheff/LOLA/tarball/master
+    icon: fa-music
   - text: Manuscript
     icon: fa-file-text-o
     href: http://dx.doi.org/10.1093/bioinformatics/btv612
-  
   right:
   - text: Databio.org
     href: http://databio.org
