--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,6 +31,6 @@ VignetteBuilder: knitr
 License: GPL-3
 biocViews: GeneSetEnrichment, GeneRegulation, GenomeAnnotation, SystemsBiology,
     FunctionalGenomics, ChIPSeq, MethylSeq, Sequencing
-URL: http://databio.org/lola
+URL: http://code.databio.org/LOLA
 BugReports: http://github.com/nsheff/LOLA
 RoxygenNote: 6.0.1
