add methods, some cleanup

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(writeCombinedEnrichment)
 import(BiocGenerics)
 import(IRanges)
 import(S4Vectors)
+import(methods)
 importFrom(GenomicRanges,GRanges)
 importFrom(GenomicRanges,GRangesList)
 importFrom(GenomicRanges,elementMetadata)
